	Fix for PR libgcj/8142 	* java/lang/natClassLoader.cc (findClass): Skip inner classes when 	loading native modules.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@58066 138bc75d-0d04-0410-961f-82ee72b054a4